# Classy3DViewer

./: .gitignore  CMakeLists.txt  LICENCE  README.md
cmake/: FindNanoGUI.cmake
data/: cloud.ply  mesh.obj.mtl  surfel_map.ply
src/: gui.cc  gui.h  main.cc  mouse_controls.cc  mouse_controls.h  shader.cc  shader.h  util.h
