CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(Classy3DViewer)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

SET(PROJECT_INCLUDE_DIRS 
	${EIGEN3_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_DIRS})

SET(SRCS src/main.cc)

set(PROJECT_LIBRARIES
	${OPENGL_LIBRARIES})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBRARIES})
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)